# GameEngine

./: .clang-format  .cmake-tools-config.json  .gitignore  CLAUDE.md  CMakeLists.txt  GameEngine.md  Phase1.md  ProjectState.md  README.md  SConstruct  setup_vendor.sh  structure.txt
config/: assets.json  game_config.json  keybinds.json  scenes.json  ui_theme.json
docs/: ChatGPTReview.md  DeveloperGuide.md  GameEngine.md  GameEngineDevelopment.md  GameEngineRules.md  Note.md  Phase0.md  Phase1.md  Phase1Review.md  Phase2.md  Phase3.md  Phase4.md  Phase5.md  Phase6.md  Phase7.md  Phase8B.md  Phase8_B.md  Phase8_Plan.md  ProjectState.md  TilemapSystem.md  structure.txt
docs/devlog/: README.md  architecture-overview.md  phase8-plan.md  phase8a-ai-fsm.md  phase8b-tilemap.md
docs/guide/: README.md  ai.md  assets.md  audio.md  build.md  debug.md  ecs.md  events.md  input.md  physics.md  rendering.md  scenes.md  tilemap.md  ui.md  utils.md
engine/assets/: AssetEntry.hpp  AssetIDs.hpp  AssetTracker.cpp  AssetTracker.hpp  SoundComposer.cpp  SoundComposer.hpp  TextureBaker.cpp  TextureBaker.hpp
engine/async/: AsyncHandle.hpp  AsyncJob.hpp  AsyncManager.cpp  AsyncManager.hpp  MainThreadDispatcher.cpp  MainThreadDispatcher.hpp  ThreadPool.cpp  ThreadPool.hpp
engine/audio/: AudioBus.hpp  AudioManager.cpp  AudioManager.hpp  MusicPlayer.cpp  MusicPlayer.hpp  SoundPlayer.hpp
engine/core/: Application.cpp  Application.hpp  EngineConfig.hpp  ServiceLocator.hpp  Timer.cpp  Timer.hpp  Window.cpp  Window.hpp
engine/data/: AssetDB.hpp  DataManager.hpp  GameConfigDB.hpp  KeybindDB.hpp  SceneDB.hpp  SettingsDB.hpp  ThemeDB.hpp
engine/ecs/: Entity.hpp  Registry.hpp
engine/input/: Gamepad.hpp  InputAction.hpp  InputManager.cpp  InputManager.hpp  Keyboard.hpp  Mouse.hpp
engine/physics/: Collider2D.hpp  PhysicsSystem2D.cpp  PhysicsSystem2D.hpp  PhysicsWorld2D.cpp  PhysicsWorld2D.hpp  RigidBody2D.hpp
engine/pool/: ObjectPool.hpp  PoolManager.hpp  Poolable.hpp
src/: main.cpp
(+153 files in other folders)
